feat(metrics): integrate Google Analytics sessions and update metrics display
- Added @google-analytics/data dependency to package.json.
- Updated MetricsShowcase component to fetch GA4 sessions for the last 7 days and display them.
- Changed the target value for 'Visitas recentes' to reflect the fetched sessions.
- Implemented a new API route to retrieve GA4 sessions using a service account.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "resend": "^6.0.1"
+  "react-dom": "19.1.0",
+  "resend": "^6.0.1",
+  "@google-analytics/data": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
